# HarmonyAdapter

./: .gitignore  LICENSE  README.md  harmonyadapter.bat  install.bat  pyproject.toml
config/: config_template.json
dev/: todo.txt
lib/: readme.txt
src/harmonyadapter/: __init__.py  cli.py  main.py
src/harmonyadapter/app/: HarmonyAdapter.py  HarmonyAdapterRequest.py  HarmonyAdapterRequestCompleter.py  ProjectPaths.py
src/harmonyadapter/app/complete/: CadreDetector.py
src/harmonyadapter/app/model/: Asset.py  (+11 more)
tests/: harmony_build_scene.bat  harmony_preview_shot_highZ.bat  harmony_preview_shot_normal.bat  harmony_preview_shot_panH.bat  harmony_preview_shot_panV.bat  harmony_preview_shot_rest_1_cad.bat  harmony_preview_shot_rest_2.bat  harmony_preview_shot_rest_3.bat  harmony_preview_shot_tilt.bat  harmony_preview_shot_truckin.bat  harmony_preview_shot_truckout.bat  harmony_render.bat  harmony_run_script_import_image.bat  harmony_run_script_openharmony.bat  harmony_run_script_test.bat  run_build_scene_test_template.bat  run_preview_test_template.bat  run_preview_test_template_with_cadres.bat  run_submodule_test.bat
tests/input/json/: multishot_123.json
tests/input/psd/: bg_with_cadres.psd  cadre_HD.psd.xli  camera_panH.psd  camera_panH.psd.xli  camera_panH.psd~  camera_panV.psd  camera_panV.psd.xli  camera_panV.psd~  camera_tilt.psd.xli  camera_truckin.psd  camera_truckin.psd.xli  camera_truckin.psd~  layers_ABC.psd  multishot_123.json  multishot_123.psd  multishot_123.psd.xli  multishot_123.psd~
tests/scripts/: qr_video_scan.py  test_apply_bg_cadre.js
(+197 files in other folders)
