[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "HarmonyAdapter"
version = "0.1.0"
description = "provide a pipeline pyhton interface for harmony scene build and export"
requires-python = ">=3.9"

dependencies = [
    "psd-tools>=1.9.0"
]

[tool.setuptools.packages.find]
where = ["src"]